# nbmetadata

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.org  pyproject.toml  test.ipynb
src/nbmetadata/: app.py  config.jsonnet  test.jsonnet
tests/: demo.ipynb
