[tool.poetry]
name = "nbmetadata"
version = "0.1.0"
description = "Modify Jupyter notebook metadata via cell comments"
authors = ["Venky Iyer <indigoviolet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nbformat = "^5.1.3"
jsonnet = "^0.18.0"
typer = "^0.4.0"
importlib-resources = "^5.4.0"
deepmerge = "^1.0.1"
in-place = "^0.5.0"


[tool.poetry.dev-dependencies]
mypy = "^0.931"
ipykernel = "^6.9.1"
icecream = "^2.1.2"
ipdb = "^0.13.9"
pytest = "6.2.5"
nbmake = "^1.2"


[tool.poetry.scripts]
nbmd = 'nbmetadata.app:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
